--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -19,6 +19,10 @@
     background-color: #538CAC;
 }
 
+.sand-text{
+    color: #C9AB7F;
+}
+
 .flash-white-text{
     color: #EEF3FA;
 }
@@ -81,18 +85,45 @@ li:hover, a:hover, .logo:hover{
 }
 /* //////////----Contact Form-----////////// */
 
+.contact-page{
+    padding: 2%;
+}
+
+.contact-page > h1{
+    margin: 0 0 2% 0;
+}
+.contact-label{
+    margin-bottom:0; 
+}
+
+.contact-btn{
+    margin-top: 10%;
+    border: .01em solid white;
+    border-radius: 5%;
+    cursor: pointer;
+    width: 30%;
+    height: 8%;
+}
+
+.contact-btn:hover{
+    background-color: #538CAC;
+}
 .contact-form{
-    width: 100%
+    width: 100%;
+    box-shadow: 1px 1px 10px;
+    padding: 2%;
+    height: 80vh;
   }
   
   .contact-form input{
-    width: 40%;
+    width: 100%;
+    height: 10%;
     display: block
   }
   
   .contact-form textarea{
-    width: 80%;
-    height: 20%;
+    width: 100%;
+    height: 30%;
     display: block;
     resize: none
   }
@@ -113,10 +144,19 @@ li:hover, a:hover, .logo:hover{
   /* --- Home --- */
 
   .home-img{
-      background-color: #538CAC;
-      text-align: center;
-      height: 80vh;
-      box-shadow: 1px 1px 10px;
+    background-color: #538CAC;
+    text-align: right;
+    height: 80vh;
+    box-shadow: 1px 1px 10px;
+    padding: 18% 5% 0 0;
+  }
+
+  .about{
+    background-color: #538CAC;
+    text-align: left;
+    height: 60vh;
+    box-shadow: 1px 1px 10px;
+    padding: 18% 0 0 5%;  
   }
  
   .content{
