added kg logo as map marker and changes h1 text/positioning

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -90,7 +90,8 @@ li:hover, a:hover, .logo:hover{
 }
 
 .contact-page > h1{
-    margin: 0 0 2% 0;
+    /* margin: 0 0 2% 0; */
+    text-align: center;
 }
 .contact-label{
     margin-bottom:0; 
