--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -186,7 +186,7 @@ li:hover, a:hover, .logo:hover{
   }
 
   .tile{
-    /* width: 35%; */
+    width: 35%;
     height: 70vh;
     margin: 1% .5%;
     text-align: center;
@@ -224,12 +224,14 @@ li:hover, a:hover, .logo:hover{
 
 .bio{
     height: 70vh;
+    width: 48%;
     margin: 1%;
     text-align: center;
     padding: 2%;
     box-shadow: 1px 1px 10px;
     border: 0.1em solid #538CAC;
     display: inline-block; 
+    position: relative;
     cursor: pointer;
 }
 
