--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -38,10 +38,12 @@ body {
 .logo {
     height: 100%;
     display: inline-block;
+    max-height: 150px;
 }
 ul {
+    align-self: flex-end;
     list-style-type: none;
-    width: 80%;
+    width: 70%;
     text-align: right;
 }
 
@@ -49,7 +51,8 @@ li {
     display: inline-block;
     margin: 2%;
     color: #EEF3FA;
-    font-size: 1.3em;
+    font-size: 1em;
+    text-transform: uppercase;
 }
 
 li:hover, a:hover, .logo:hover{
@@ -63,6 +66,7 @@ li:hover, a:hover, .logo:hover{
     padding: 0.5% 2%;
     margin-bottom: 0.5%;
     display: flex;
+    justify-content: space-between;
     box-shadow: 1px 1px 5px;
 }
 
@@ -95,7 +99,7 @@ li:hover, a:hover, .logo:hover{
     text-align: center;
 }
 .contact-label{
-    margin-bottom:0; 
+    margin-bottom:0;
 }
 
 .contact-btn{
@@ -114,10 +118,10 @@ li:hover, a:hover, .logo:hover{
     width: 100%;
     box-shadow: 1px 1px 10px;
     padding: 2%;
-    height: 80vh;
+    height: 50vh;
     display: inline-block;
   }
-  
+
   .map-contact-container{
       display: flex;
   }
@@ -130,20 +134,20 @@ li:hover, a:hover, .logo:hover{
     height: 10%;
     display: block
   }
-  
+
   .contact-form textarea{
     width: 100%;
     height: 30%;
     display: block;
     resize: none
   }
-  
+
   @media screen and (max-width: 600px) {
     .contact-form input{
       width: 100%;
       display: block
     }
-    
+
     .contact-form textarea{
       width: 100%;
       height: 20%;
@@ -158,7 +162,10 @@ li:hover, a:hover, .logo:hover{
     text-align: right;
     height: 80vh;
     box-shadow: 1px 1px 10px;
-    padding: 18% 5% 0 0;
+    padding: 20px 40px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
   }
 
   .about{
@@ -166,7 +173,7 @@ li:hover, a:hover, .logo:hover{
     text-align: left;
     height: 60vh;
     box-shadow: 1px 1px 10px;
-    padding: 18% 0 0 5%;  
+    padding: 18% 0 0 5%;
   }
 
   .about-content{
@@ -177,37 +184,52 @@ li:hover, a:hover, .logo:hover{
     border: .01em solid white;
     border-radius: 2%;
     cursor: pointer;
-    width: 20%;
-    height: 20%;
+    width: 150px;
+    height: 70px;
   }
- 
+
   .about-btn:hover, .tile-btn:hover{
     background-color: #576260;
   }
   .content{
-      margin: 2% 2%;
+      margin: 10px 0;
   }
 
   .tile{
     width: 32%;
-    height: 70vh;
-    margin: 1% .5%;
+    /* height: 70vh; */
+    /* margin: 1% .5%; */
     text-align: center;
-    padding: 2%;
+    padding: 30px 10px;
     box-shadow: 1px 1px 10px;
     border: 0.1em solid #538CAC;
-    display: inline-block;  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 .tile-btn{
     border: .01em solid white;
     border-radius: 2%;
     cursor: pointer;
+    max-width: 200px;
+    min-height: 20px;
     width: 80%;
     height: 8%;
 }
   .services{
-      margin: auto;
+      margin: 15px 0;
       display: flex;
+      justify-content: space-between;
+      align-content: center;
+  }
+
+  .service-title {
+      text-transform: uppercase;
+  }
+
+  .services-content {
+      height: 300px;
+      margin: 10px;
   }
 
   .strands{
@@ -233,7 +255,7 @@ li:hover, a:hover, .logo:hover{
     padding: 2%;
     box-shadow: 1px 1px 10px;
     border: 0.1em solid #538CAC;
-    display: inline-block; 
+    display: inline-block;
     position: relative;
     cursor: pointer;
 }
@@ -268,3 +290,14 @@ li:hover, a:hover, .logo:hover{
   .align-center{
       text-align: center;
   }
+
+@media (max-width: 700px) {
+    .services {
+        flex-direction: column;
+    }
+
+    .tile {
+        margin: 10px 0;
+        width: 100%;
+    }
+}
